<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/app_logo"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/my_image_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Login_Your_Account"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FullNameFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/input_background"
            android:hint="@string/email_input"
            android:textColorHint="@color/placeholder_text_color"
            app:boxBackgroundColor="@color/input_background"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:cursorColor="@color/white"
            app:hintTextColor="@color/primary_green"
            app:startIconDrawable="@drawable/ic_logo"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textWebEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/input_background"
            android:hint="@string/password_input"
            android:textColorHint="@color/placeholder_text_color"
            app:boxBackgroundColor="@color/input_background"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:cursorColor="@color/white"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/primary_green"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/forgot_password"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/loginbtn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primary_green"
            android:text="@string/login"
            android:fontFamily="@font/poppins_bold"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:elevation="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/desc"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            android:textSize="15sp" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/input_background"
            android:contentDescription="@string/image_button_description"
            android:src="@drawable/ic_google"
            android:elevation="10dp"/>
        <!-- alternative color text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redirection_desc"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_in"
                android:padding="20dp"
                android:backgroundTint="@color/primary_dark"
                android:textColor="@color/primary_green"
                android:clickable="true"
                android:enabled="true"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>