<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">

    <!-- Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
        <include layout="@layout/avatar_input"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FullNameFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/input_background"
                android:hint="@string/full_name"
                android:textColorHint="@color/placeholder_text_color"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/white"
                app:hintTextColor="@color/primary_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/input_background"
                android:hint="@string/email"
                android:textColorHint="@color/placeholder_text_color"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/white"
                app:hintTextColor="@color/primary_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/input_background"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:textColorHint="@color/placeholder_text_color"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/white"
                app:hintTextColor="@color/primary_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/input_background"
                    android:inputType="phone"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthdate"
                android:textColorHint="@color/placeholder_text_color"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/white"
                app:hintTextColor="@color/primary_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/input_background"
                    android:inputType="date"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pwdFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/placeholder_text_color"
                app:boxBackgroundColor="@color/input_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/white"
                app:hintTextColor="@color/primary_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwdField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/input_background"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- bottom frame -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_green"
                android:padding="20dp"
                android:text="Sign up"
                android:textSize="16dp" />


            <!-- alternative color text -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/log_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Log in"
                    android:textColor="@color/primary_green"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>